# SocketCanCompose

./: README.md  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/java/com/example/socketcan/: SocketCAN.java
composeApp/src/androidMain/kotlin/com/example/socketcan/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/example/socketcan/: App.kt  Platform.kt
composeApp/src/commonMain/kotlin/com/example/socketcan/other/: Command.kt  Ext.kt
composeApp/src/jvmMain/java/com/example/socketcan/: SocketCAN.java
composeApp/src/jvmMain/kotlin/com/example/socketcan/: Platform.jvm.kt  T.kt  main.kt
gradle/: libs.versions.toml
jni/: CMakeLists.txt  Makefile  socketcan.cpp
